--- a/FrontMov/css/style.css
+++ b/FrontMov/css/style.css
@@ -58,7 +58,6 @@ div.carousel-nav-icon > svg {
     display: flex;
 }
 
-/* medium and up screens */
 @media (min-width: 768px) {
 
     .carousel-inner .carousel-item-end.active,
@@ -77,7 +76,6 @@ div.carousel-nav-icon > svg {
     transform: translateX(0);
 }
 
-/* Nothing below this point is needed. */
 .dark-mode-toggle {
     bottom: 3%;
     right: 3%;
@@ -88,3 +86,14 @@ div.carousel-nav-icon > svg {
 .dark-mode-toggle > * > * {
     cursor: pointer;
 }
+
+.shadow-nav {
+    box-shadow: 0 0 9px 1px;
+}
+
+.card-review {
+    img {
+       width: 2.5rem;
+       height: 2.5rem;
+    }
+ }
